force-app/main/default/objects/Evaluation__c/Evaluation__c.object-meta.xml
<CustomObject>
    <label>Evaluation</label>
    <nameField>
        <displayFormat>Eval-{0000}</displayFormat>
        <label>Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>