force-app/main/default/objects/Evaluation__c/fields/Defensive_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Defensive_Awareness__c</fullName>
    <inlineHelpText>Between 1 and 10</inlineHelpText>
    <label>Defensive Awareness</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>