force-app/main/default/objects/Evaluation__c/fields/Further_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Further_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Further Evaluation</label>
    <type>Checkbox</type>
</CustomField>