force-app/main/default/objects/Evaluation__c/fields/Match_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Match_Intelligence__c</fullName>
    <inlineHelpText>1-10</inlineHelpText>
    <label>Match Intelligence</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>