force-app/main/default/objects/Evaluation__c/fields/Player_Application__c.field-meta.xml
<CustomField>
    <fullName>Player_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player Application</label>
    <referenceTo>Player_Application__c</referenceTo>
    <relationshipLabel>Evaluations</relationshipLabel>
    <relationshipName>Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>