force-app/main/default/objects/Evaluation__c/fields/Shooting__c.field-meta.xml
<CustomField>
    <fullName>Shooting__c</fullName>
    <label>Shooting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scale</valueSetName>
    </valueSet>
</CustomField>