force-app/main/default/objects/Evaluation__c/fields/Shooting_Ability__c.field-meta.xml
<CustomField>
    <fullName>Shooting_Ability__c</fullName>
    <inlineHelpText>1-10</inlineHelpText>
    <label>Shooting Ability</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>