force-app/main/default/objects/Evaluation__c/fields/Technique__c.field-meta.xml
<CustomField>
    <fullName>Technique__c</fullName>
    <inlineHelpText>1-10</inlineHelpText>
    <label>Technique</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>