force-app/main/default/objects/Evaluation__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>( Passing__c + Defensive_Awareness__c + Shooting_Ability__c +  Technique__c +   Tracking_Back__c + Match_Intelligence__c) /6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>