force-app/main/default/objects/Evaluation__c/fields/Tracking_Back__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Back__c</fullName>
    <label>Tracking Back</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scale</valueSetName>
    </valueSet>
</CustomField>